@@ -563,6 +563,9 @@ public class User extends AbstractVO<User> implements SetPointSource, JsonSerial
 
         if (StringUtils.isBlank(username))
             response.addMessage("username", new TranslatableMessage("validate.required"));
+        else if(!UserDao.getInstance().isUsernameUnique(username, id))
+            response.addMessage("username", new TranslatableMessage("validate.required"));
+        
         if (StringUtils.isBlank(email))
             response.addMessage("email", new TranslatableMessage("validate.required"));
 
